dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame
  labels:
    app: boardgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
      - name: boardgame-container
        image: 047719649994.dkr.ecr.ap-south-1.amazonaws.com/apps/boardgame:latest  # <-- default starter image
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
spec:
  selector:
    app: boardgame
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort  # For testing via EC2 public IP
